--- a/teacher-hanee-portfolio/src/styles.css
+++ b/teacher-hanee-portfolio/src/styles.css
@@ -21,8 +21,12 @@ body {
     color: var(--accent);
     padding-bottom: 100px;
     background: var(--white);
-  background-image: linear-gradient(rgb(51, 204, 255,0.5) .1em, transparent .1em), linear-gradient(90deg, rgb(51, 204, 255,0.5).1em, transparent .1em);
-  background-size: 40px 40px;
+    /* background-image: linear-gradient(rgb(163, 163, 204,0.18) .1em, transparent .1em), linear-gradient(90deg, rgb(163, 163, 204,0.18).1em, transparent .1em);
+    background-size: 40px 40px; */
+    background-image:url("./assets/pastel_gradient_2.png");
+    background-size:100vw 100vh;
+    background-repeat:no-repeat;
+  
   }
   
   * {
@@ -110,6 +114,18 @@ body {
     padding: 20px;
     margin: 0 auto;
   }
+
+  #MainContainer{
+    width:100%;
+    height:100%;
+    /* background:linear-gradient(200deg,rgb(255, 51, 190,0.7),rgb(255, 153, 255,0.8),rgb(255, 255, 255,0.2),rgb(255, 255, 255,0.2)); */
+
+    
+    z-index:-10;
+    background-image:url("./assets/bg2.jpg");
+    background-repeat: no-repeat;
+    background-size: auto;
+  }
   
   .progress-bar {
     position: fixed;
@@ -119,5 +135,18 @@ body {
     height: 10px;
     background: orange;
     transform-origin: 0%;
+    z-index:10;
   }
   
+  #Navbar{
+    background: rgb(255, 153, 255,0.5);
+    box-shadow: 0 8px 32px 0 rgba( 31, 38, 135, 0.37 );
+    backdrop-filter: blur( 2.5px );
+    -webkit-backdrop-filter: blur( 2.5px );
+
+    border: 1px solid rgba( 255, 255, 255, 0.18 );
+    top:10px;position:fixed;padding:10px;padding-left:25px;padding-right:25px;display:flex;justify-content:space-between;width:100vw;z-index:10;
+    color:white;
+    font-weight:bold;
+    text-shadow:0px 0px 3px lightgray;
+  }
