--- a/teacher-hanee-portfolio/src/styles.css
+++ b/teacher-hanee-portfolio/src/styles.css
@@ -1,3 +1,7 @@
+html{
+    scroll-behavior:smooth;
+}
+
 body {
     --black: #000000;
     --ash-black: #222;
@@ -23,9 +27,7 @@ body {
     background: var(--white);
     /* background-image: linear-gradient(rgb(163, 163, 204,0.18) .1em, transparent .1em), linear-gradient(90deg, rgb(163, 163, 204,0.18).1em, transparent .1em);
     background-size: 40px 40px; */
-    background-image:url("./assets/pastel_gradient_2.png");
-    background-size:100vw 100vh;
-    background-repeat:no-repeat;
+   
   
   }
   
@@ -119,12 +121,15 @@ body {
     width:100%;
     height:100%;
     /* background:linear-gradient(200deg,rgb(255, 51, 190,0.7),rgb(255, 153, 255,0.8),rgb(255, 255, 255,0.2),rgb(255, 255, 255,0.2)); */
-
+    background-image:url("./assets/pastel_gradient_2.png");
+    background-size:100vw 100vh;
+    background-repeat:no-repeat;
+    position:absolute;
     
-    z-index:-10;
+    /* z-index:-10;
     background-image:url("./assets/bg2.jpg");
     background-repeat: no-repeat;
-    background-size: auto;
+    background-size: auto; */
   }
   
   .progress-bar {
