--- a/teacher-hanee-portfolio/src/pages/Menu.css
+++ b/teacher-hanee-portfolio/src/pages/Menu.css
@@ -155,7 +155,7 @@
   
   .menu {
     filter: drop-shadow(1px 1px 1px #5116a9);
-    width: 300px;
+    width: 155px;
   }
   
  .menu ul {
@@ -176,12 +176,13 @@
     list-style: none;
     margin: 0;
     padding: 10px;
+    background:mediumorchid;
   }
   
   .menu button {
     -webkit-appearance: button;
-    background: red;
-    color: green;
+    background: mediumorchid;
+    color: white;
     border: none;
     border-radius: 10px;
     padding: 10px 20px;
