--- a/teacher-hanee-portfolio/src/components/Header/Header.css
+++ b/teacher-hanee-portfolio/src/components/Header/Header.css
@@ -1,13 +1,15 @@
 #Container{
     display:flex;
-    justifyContent:center;
+    justify-content:center;
+    align-items:center;
     flex-direction:column;
     borderRadius:25px;
     padding:5em;
-    gap:200px;
+    gap:5px;
     height:fit-content;
-    background:  rgb(255, 153, 255,0.5);
-    box-shadow: 0 8px 32px 0 rgba( 31, 38, 135, 0.37 );
+    background:  rgb(255, 153, 255,0.1);
+    /* box-shadow: 0 8px 32px 0 rgba( 31, 38, 135, 0.37 ); */
+    filter:  drop-shadow(1px 1px 1px #5116a9);
     backdrop-filter: blur( 5px );
     -webkit-backdrop-filter: blur( 5px );
     border-radius: 10px;
@@ -17,13 +19,31 @@
 @media only screen and (max-width: 600px) {
     #Container{
         padding:0;
+        width:100vw;
+        padding-top:25px;
+        gap:50px;
+        div{
+            div{
+                p{
+                    font-size:28px;
+                    filter:  drop-shadow(0px 0px 0px #5116a9);
+
+                }
+                h6{
+                    font-size:15px !important;
+                }
+            }
+        }
     }
   }
   
   /* Small devices (portrait tablets and large phones, 600px and up) */
   @media only screen and (min-width: 600px) {
     #Container{
+        width:100vw;
         padding:0;
+        padding-top:25px;
+        gap:50px;
     }
   }
   
@@ -31,6 +51,7 @@
   @media only screen and (min-width: 768px) {
     #Container{
         padding:5em;
+        width:100%;
     }
   } 
   
@@ -63,9 +84,10 @@
     line-height: 2.5em;
     text-transform: uppercase;
     padding: 0 1em;
-    box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(110, 80, 20, 0.4),
+    /* box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(110, 80, 20, 0.4),
       inset 0 -2px 5px 1px rgba(139, 66, 8, 1),
-      inset 0 -1px 1px 3px rgba(250, 227, 133, 1);
+      inset 0 -1px 1px 3px rgba(250, 227, 133, 1); */
+      filter:  drop-shadow(1px 1px 1px #5116a9);
     background-image: linear-gradient(
       160deg,
       #a54e07,
