--- a/teacher-hanee-portfolio/src/styles.css
+++ b/teacher-hanee-portfolio/src/styles.css
@@ -117,20 +117,24 @@ body {
     margin: 0 auto;
   }
 
-  #MainContainer{
+  .MainContainer{
     width:100%;
     height:100%;
     /* background:linear-gradient(200deg,rgb(255, 51, 190,0.7),rgb(255, 153, 255,0.8),rgb(255, 255, 255,0.2),rgb(255, 255, 255,0.2)); */
     background-image:url("./assets/pastel_gradient_2.png");
-    background-size:100vw 100vh;
+    background-size:cover;
     background-repeat:no-repeat;
     position:absolute;
-    
+    display:flex;
+  
+    align-items:center;
+    flex-direction:column;
     /* z-index:-10;
     background-image:url("./assets/bg2.jpg");
     background-repeat: no-repeat;
     background-size: auto; */
   }
+
   
   .progress-bar {
     position: fixed;
@@ -144,8 +148,9 @@ body {
   }
   
   #Navbar{
-    background: rgb(255, 153, 255,0.5);
-    box-shadow: 0 8px 32px 0 rgba( 31, 38, 135, 0.37 );
+    background:  rgb(255, 153, 255,0.1);
+    /* box-shadow: 0 8px 32px 0 rgba( 31, 38, 135, 0.37 ); */
+    filter:  drop-shadow(1px 1px 1px #5116a9);
     backdrop-filter: blur( 2.5px );
     -webkit-backdrop-filter: blur( 2.5px );
 
