--- a/teacher-hanee-portfolio/src/components/Header/Header.css
+++ b/teacher-hanee-portfolio/src/components/Header/Header.css
@@ -8,7 +8,7 @@
     gap:5px;
     height:fit-content;
     background:  rgb(255, 153, 255,0.1);
-    /* box-shadow: 0 8px 32px 0 rgba( 31, 38, 135, 0.37 ); */
+    /* box-shadow: 1px 1px 0px 1px #5116a9; */
     filter:  drop-shadow(1px 1px 1px #5116a9);
     backdrop-filter: blur( 5px );
     -webkit-backdrop-filter: blur( 5px );
