--- a/teacher-hanee-portfolio/src/styles.css
+++ b/teacher-hanee-portfolio/src/styles.css
@@ -1,5 +1,10 @@
 html{
     scroll-behavior:smooth;
+    scroll-snap-type:y mandatory;
+}
+section{
+    scroll-snap-align:start;
+    scroll-margin-top:100px;
 }
 
 body {
@@ -36,6 +41,7 @@ body {
     font-weight: 400;
     font-style: normal;
     -webkit-font-smoothing: antialiased;
+    word-wrap:break-word;
   }
   
   h1,
@@ -61,7 +67,7 @@ body {
   }
   
   p {
-    margin: 0 0 30px 0;
+    margin: 0 0 15px 0;
     font-size: 18px;
   }
   
@@ -116,12 +122,13 @@ body {
     padding: 20px;
     margin: 0 auto;
   }
+  
 
   .MainContainer{
     width:100%;
     height:100%;
     /* background:linear-gradient(200deg,rgb(255, 51, 190,0.7),rgb(255, 153, 255,0.8),rgb(255, 255, 255,0.2),rgb(255, 255, 255,0.2)); */
-    background-image:url("./assets/pastel_gradient_2.png");
+    /* background-image:url("./assets/bg1.jpg"); */
     background-size:cover;
     background-repeat:no-repeat;
     position:absolute;
@@ -148,7 +155,7 @@ body {
   }
   
   #Navbar{
-    background:  rgb(255, 153, 255,0.1);
+    /* background:  rgb(255, 153, 255,0.1); */
     /* box-shadow: 0 8px 32px 0 rgba( 31, 38, 135, 0.37 ); */
     filter:  drop-shadow(1px 1px 1px #5116a9);
     backdrop-filter: blur( 2.5px );
