--- a/teacher-hanee-portfolio/src/styles.css
+++ b/teacher-hanee-portfolio/src/styles.css
@@ -1,6 +1,7 @@
 html{
     scroll-behavior:smooth;
     scroll-snap-type:y mandatory;
+    
 }
 section{
     scroll-snap-align:start;
@@ -42,6 +43,9 @@ body {
     font-style: normal;
     -webkit-font-smoothing: antialiased;
     word-wrap:break-word;
+    margin:0;
+    padding:0;
+    box-sizing:border-box;
   }
   
   h1,
