--- a/teacher-hanee-portfolio/src/components/Experience/Experience.css
+++ b/teacher-hanee-portfolio/src/components/Experience/Experience.css
@@ -1,15 +1,14 @@
-#ExperienceContainer{
+#FeaturedExperience{
    
-    background-size:40px 40px;
-    background-image:linear-gradient(to bottom, #4b4a4b, transparent 1px);
-    border-radius:10px;
-    border:1px solid gray;
- 
-    
+       background-size:100px 28px;
+            background-image:linear-gradient(to bottom, rgb(0,0,0,0.3), transparent 1px);
+            /* border-radius:10px; */
+            border:1px solid gray;
+
+   
 }
 
 #MarginLine{
-    width:10%;
     height:100%;
     position:absolute;
     left:15%;
@@ -22,10 +21,6 @@
     /* Extra small devices (phones, 600px and down) */
     @media only screen and (max-width: 600px) {
         #Exp{
-            background-size:40px 40px;
-            background-image:linear-gradient(to bottom, #4b4a4b, transparent 1px);
-            border-radius:10px;
-            border:1px solid gray;
         }
         #ExperienceContainer{
             background-size:;
@@ -38,10 +33,7 @@
       /* Small devices (portrait tablets and large phones, 600px and up) */
       @media only screen and (min-width: 600px) {
         #Exp{
-            background-size:40px 40px;
-            background-image:linear-gradient(to bottom, #4b4a4b, transparent 1px);
-            border-radius:10px;
-            border:1px solid gray;
+        
         }
         #ExperienceContainer{
             background-size:;
@@ -58,12 +50,10 @@
             background-image:none;
             border-radius:0;
             border:none;
+            
         }
         #ExperienceContainer{
-            background-size:40px 40px;
-            background-image:linear-gradient(to bottom, #4b4a4b, transparent 1px);
-            border-radius:10px;
-            border:1px solid gray;
+     
         }
       } 
       
@@ -76,10 +66,7 @@
             border:none;
         }
         #ExperienceContainer{
-            background-size:40px 40px;
-            background-image:linear-gradient(to bottom, #4b4a4b, transparent 1px);
-            border-radius:10px;
-            border:1px solid gray;
+       
         }
       } 
       
@@ -94,9 +81,6 @@
 
         }
         #ExperienceContainer{
-            background-size:40px 40px;
-            background-image:linear-gradient(to bottom, #4b4a4b, transparent 1px);
-            border-radius:10px;
-            border:1px solid gray;
+         
         }
       }
